# kebab-it

./: .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  kebab  pyproject.toml
docs/: shell-completion.md
kebab_it/: __init__.py  cli.py  logging_config.py  renamer.py  stats.py  utils.py
scripts/: install-completion.sh
tests/: __init__.py  test_renamer.py  test_stats.py  test_utils.py
